--- a/content/english/post/index.en.Rmd
+++ b/content/english/post/index.en.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Test of some analysis help material"
 author: "Billy Geary"
+date: 2024-04-03
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 ---
